# fatesclaw

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
apps/fatesclaw-dashboard/: README.md  pyproject.toml
apps/fatesclaw-dashboard/overlays/: fates-buttons-4encoders-rpi.dts  fates-buttons-4encoders.dts  fates-buttons-encoders.dts
apps/fatesclaw-dashboard/scripts/: install_dev.sh  run_dev.sh  ssd1322_smoke_test.py
apps/fatesclaw-dashboard/src/fatesclaw_dashboard/: __init__.py  config.py  logging_setup.py  main.py  state.py
apps/fatesclaw-dashboard/src/fatesclaw_dashboard/actions/: __init__.py  approvals.py  chat.py  commands.py  cron.py  sessions.py  skills.py
apps/fatesclaw-dashboard/src/fatesclaw_dashboard/gateway/: __init__.py  client.py  events.py  protocol.py  session_logs.py
apps/fatesclaw-dashboard/src/fatesclaw_dashboard/input/: __init__.py  buttons.py  encoders.py  events.py  fates_evdev.py  keyboard.py  mapper.py
apps/fatesclaw-dashboard/src/fatesclaw_dashboard/oled/: __init__.py  device.py  icons.py  layout.py  renderer.py  theme.py  views.py  widgets.py
apps/fatesclaw-dashboard/src/fatesclaw_dashboard/system/: __init__.py  health.py  metrics.py  processes.py
apps/fatesclaw-dashboard/src/fatesclaw_dashboard/voice/: __init__.py  capture.py  pipeline.py  transcribe.py  tts.py  vad.py
apps/fatesclaw-dashboard/tests/: test_actions_chat.py  test_config.py  test_fates_evdev.py  test_gateway_protocol.py  test_input_mapper.py  test_keyboard_input.py  test_oled_views.py  test_session_logs.py  test_state_streams.py
docs/: dashboard.md  (+9 more)
(+21 files in other folders)
